fix(Social): fix spacing between Social icons

--- a/src/patterns/Social/_social.scss
+++ b/src/patterns/Social/_social.scss
@@ -1,7 +1,7 @@
 @use '#scss/allPartials' as *;
 
 $icon_width: 1.75rem;
-$icon_gap: 0.75rem;
+$icon_gap: 2rem;
 $num_icons: 5;
 
 .#{$px}-social {
@@ -58,7 +58,8 @@ $num_icons: 5;
       align-items: center;
       border-top: 1px solid #eae8e4;
       display: flex;
-      justify-content: space-between;
+      gap: 0 $icon_gap;
+      justify-content: flex-start;
       list-style: none;
       margin: $spacing-md 0 0;
       max-width: calc($num_icons * $icon_width + ($num_icons - 1) * $icon_gap);
